# pngdiff

./: .gitignore  CMakeLists.txt  README.md  crc_utils.cpp  crc_utils.h  image-x-pngdiff.xml  png.cpp  png.h  png.py  png_diff.py  pngdiff.cpp  pngdiff.h  pngdiff.json  pngdiff_thumbcreator.cpp  pngdiffthumbnail.desktop
pngdiff_utils/: setup.py
pngdiff_utils/pngdiff/: __init__.py  png.py  pngdiff.py
pngdiff_utils/pngdiff_utils/: png.py  png_diff.py
